--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test1",
+  "name": "ecommerse",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.13.6",
+    "@mui/styled-engine-sc": "^5.12.0",
     "crypto-js": "^4.1.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
     "next": "13.4.4",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-toastify": "^9.1.3",
-    "react-top-loading-bar": "^2.3.1"
+    "react-top-loading-bar": "^2.3.1",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
