--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@mui/material": "^5.13.6",
     "@mui/styled-engine-sc": "^5.12.0",
     "crypto-js": "^4.1.1",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
     "next": "13.4.4",
@@ -28,6 +26,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.9",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
