--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mui/material": "^5.13.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.7",
     "@mui/styled-engine-sc": "^5.12.0",
     "crypto-js": "^4.1.1",
     "jsonwebtoken": "^9.0.0",
@@ -20,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.9.0",
+    "react-loader-spinner": "^5.3.4",
     "react-toastify": "^9.1.3",
     "react-top-loading-bar": "^2.3.1",
     "styled-components": "^5.3.11"
