--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.7",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "crypto-js": "^4.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
@@ -23,8 +24,11 @@
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
     "react-top-loading-bar": "^2.3.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
